# imu-module

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  repo_tree.py
.github/workflows/: ci.yml  claude-review.yml  docker.yml  pypi-publish.yml
data/mocap/: test rig run 01 arduino01.csv  test rig run 02 arduino02.csv  test rig run 03 bno055jetson 01.csv  test rig run 04 bno055jetson 02.csv  test rig run 05 bno055jetson no mag.csv  test rig run 06 lsmJetson.csv
data/mocap/trimmed/: bno055_01_imu.csv  bno055_01_mocap.csv  bno055_nomag_imu.csv  bno055_nomag_mocap.csv  lsm_imu.csv  lsm_mocap.csv
data/recordings/: arduino.csv  imu_data_2025-12-12_12-57-47.csv  imu_data_BNO055.csv  imu_data_BNO08x.csv  imu_data_LSM6DSOX.csv  imu_data_bno055.csv
data/test_recordings/: arduino2.csv
results/: LSM_error.csv  LSM_imu_euler.csv  LSM_mocap_euler.csv  arduino01_error.csv  arduino01_imu_euler.csv  arduino01_mocap_euler.csv  arduino02_error.csv  arduino02_imu_euler.csv  arduino02_mocap_euler.csv  bno055_01_error.csv  bno055_01_imu_euler.csv  bno055_01_mocap_euler.csv  bno055_jetson_01_error.csv  bno055_jetson_01_imu_euler.csv  bno055_jetson_01_mocap_euler.csv  lsm6dsox_lis3mdl_01_error.csv  lsm6dsox_lis3mdl_01_imu_euler.csv  lsm6dsox_lis3mdl_01_mocap_euler.csv
src/imu_python/: __init__.py  __main__.py  base_classes.py  bno055_imu.py  builtin_devices.py  data_writer.py  definitions.py  devices.py  factory.py  i2c_bus.py  imu_base.py  imu_data.py  imu_devices.py  imu_factory.py  imu_mock.py  imu_sensor.py  imu_type.py  imu_wrapper.py  mock_imu.py  orientation_filter.py  orientation_filters.py  registry.py  sensor_manager.py  st9dof_imu.py  utils.py  wrapper.py
src/imu_python/calibration/: calibration.py  ellipsoid_fitting.py  mag_calibration.py
src/imu_python/data_handler/: calibration.py  data_plotter.py  data_reader.py  data_writer.py  ellipsoid_fitting.py  gain_calculator.py
src/imu_utilities/: __main__.py  utils.py
tests/: base_classes_test.py  calibration_test.py  devices_test.py  factory_manager_test.py  factory_test.py  i2c_bus_test.py  imu_factory_manager_test.py  imu_sensor_test.py  jetson_bus_test.py  main_test.py  orientation_filter_test.py  reader_writer_test.py  registry_test.py  sensor_manager_test.py  utils_test.py  wrapper_test.py
tests/calibration/: calibration_test.py  gain_calculator_test.py
tests/data/: imu_data_test.csv
tests/data_handler/: calibration_test.py  gain_calculator_test.py  reader_test.py  writer_test.py
verification/: calculate_orientation.py  imu_to_angle.py  main.py  mocap_to_angle.py  plot.py  script.py  xlsx_converter.py
verification/trash/: imu_to_angle.py  main.py  mocap_imu_align.py  mocap_to_angle.py  read_matlab.py
