[project]
name = "imu-python"
version = "0.0.2a13"
description = "IMU sensor codes in Python for the exosuit"
readme = "README.md"
authors = [
  { name = "Tsmorz", email = "tony.smoragiewicz@tum.de" },
  { name = "CatYang3", email = "haoqing.yang@tum.de" }
]
requires-python = ">=3.11,<3.14"

dependencies = [
  "numpy>=2.2.3",
  "loguru>=0.7.3",
  "adafruit-circuitpython-bno055>=5.4.20",
  "jetson-gpio>=2.1.12",
]

[dependency-groups]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pre-commit>=4.1.0",
  "coveralls>=4.0.1",
  "pyright>=1.1.407",
]

[project.urls]
homepage = "https://github.com/TUM-Aries-Lab/imu-module"

# -------------------------------------------------------------------
# RUFF
# -------------------------------------------------------------------
[tool.ruff]
line-length = 88
fix = true

lint.select = [
  "E","F","W","C90","I","N","D","UP","B","S","YTT","Q","PL",
  "RUF","T20","F841","ERA001"
]

lint.ignore = [
  "D203","D213","E501","N803","N806","D415","S101","E203","E731",
  "D107","PLR2004","S607","S605","S603"
]

[tool.ruff.lint.isort]
known-first-party = ["imu_python"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -------------------------------------------------------------------
# BUILD SYSTEM — uv uses hatchling (correct)
# -------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------------------------------------------------
# HATCH — correct src layout config
# -------------------------------------------------------------------
[tool.hatch.build]
# Correct package declaration for src layout:
packages = ["src/imu_python"]

# Optional extras; not required but kept:
include = [
  "src/imu_python/**/*.py",
  "README.md",
  "LICENSE",
]

# No [tool.uv.*] needed for a standard library project.
